<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/background1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/buttonlayoutclassicblue"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />

    <EditText
        android:id="@+id/txtInput"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittextlayout"
        android:backgroundTint="#FFF"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/groepscode"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/Grijs"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="182dp"
        android:layout_height="165dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welkomtekst"
        android:textColor="#FFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/stap0"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</android.support.constraint.ConstraintLayout>