...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/cmdNeemFoto"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/buttonlayoutlightblue"
...
